--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.517.0",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-<<<<<<< HEAD
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
-=======
-    "react-scripts": "3.1.1",
-    "reactstrap": "^8.0.1"
->>>>>>> 4b8d2ac417c5456c9ded9587e6c7bd9e352eb290
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
