--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-images-upload": "^1.2.7",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
